@@ -1,3 +1,7 @@
+2017-11-19         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* make_extension_directory: Add -C option for a C++ extension.
+
 2017-11-18         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 
 	* Development: Fix typo.
